# template_cpp_cmake

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: main.yml
include/: module.hpp  version.hpp.in
src/: CMakeLists.txt  main.cpp  module.cpp
tests/: CMakeLists.txt  main.cpp
